static/style/basic.css
/* ... */
body.search #banner #searchPlate button {
    background-color: var(--black);
    transform: translateX(calc(100% + 5px));
    margin-left: 15px;
}
#banner #searchPlateMobile {
    width: 100%;
    padding: 6px;
    margin: -6px;
    border-radius: 13px;
    min-height: 40px;
    margin-top: 40px;
}
#banner #searchPlateMobile #search {
    height: 40px;
    background-color: var(--white);
    border: 1px solid var(--black);
    justify-content: space-between;
}
#banner #searchPlateMobile #search  input {
    width: 100%;
    color: var(--black);
}
#banner #searchPlateMobile #search  input::placeholder {
    color: var(--black);
}
#banner #searchPlateMobile #search button {
    background-color: transparent;
    padding: 0px;
}
#banner #searchPlateMobile #search button img {
    filter: invert();
}

#banner #searchPlate {
    padding: 3px;
    margin: -3px;
    overflow: hidden;
    position: relative;
    transition: 0.2s;
    /* padding-right: 48px; */
    border-radius: 10px;
}
body.search #banner #searchPlate {
    background-color: var(--white);
}
body.searchMobile #banner #searchPlateMobile {
    background-color: var(--black);
}
#banner #results {
    max-height: 40vh;
    width: calc(100%);
    overflow-x: visible;
    overflow-y: auto;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}
#banner #results::-webkit-scrollbar {
    display: none;
}
#banner #results ul {
    padding: 0px;
    margin: 0px;
    width: calc(100% - 2px);
    margin-left: 2px;
    list-style-type: none;
}
#banner #results ul li {
    font-size: 1.4rem;
    border-radius: 7px;
    cursor: pointer;
    border: 1px solid var(--white);
    padding: 10px 0px;
    padding-right: 15px;
}
#banner #searchPlateMobile #results ul li {
    border: 0px solid var(--black);
    color: var(--white);
}
#banner #results ul li:first-child {
    margin-top: 10px;
}
#banner #results ul li:last-child {
    margin-bottom: 5px;
}
#banner #results ul li:active {
    transform: scale(0.98);
}
#banner #results ul li:hover {
    border: 1px solid var(--black);
}

#banner button:hover {
    background-color: var(--light_black);
    /* color: var(--black); */
}
#banner button#lang {
    aspect-ratio: 1/1;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}
#banner button img {
    height: 25px;
}
#banner #search img {
    height: 15px;
}
#banner #search input {
    background-color: transparent;
    border: 0px;
    height: 100%;
    width: 170px;
    outline: 0px;
    padding: 0px;
    color: var(--white);
    font-size: 1.4rem;
}
#banner #search input::placeholder {
    color: var(--white);
}

#whereitbegan {
    text-align: center;
    width: 100%;
    height: 45vh;
    pointer-events: none;
    max-height: 500px;
    background-color: transparent !important;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
#whereitbegan h1 {
    font-size: 2.4rem;
    font-weight: 600;
    color: var(--white);
    margin: 0px;
}
#whereitbegan p {
    font-size: 1.4rem;
    color: var(--grey);
}

#menu {
    display: flex;
    width: 35px;
    gap: 7px;
    height: auto;
    z-index: 2;
    padding: 30px;
    cursor: pointer;
    margin: -20px;
    margin-right: -20px;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
    transition: 0.1s;
}
#menu:hover {
    opacity: 0.8;
}
#menu:active {
    transform: scale(0.9);
}
#menu #line {
    display: flex;
    width: 100%;
    height: 3px;
    transition: 0.2s ease-in-out;
    transform-origin: center;
    justify-content: space-between;
}
body.menu #menu #line:first-child {
    transform: translateY(10px) rotate(45deg) scaleX(0.8);
}
body.menu #menu #line:nth-child(2) {
    opacity: 0;
}
body.menu #menu #line:last-child {
    transform: translateY(-10px) rotate(-45deg) scaleX(0.8);
}
#menu #line div {
    width: 27%;
    height: 3px;
    border-radius: 3px;
    background-color: var(--white);
}
body.menu #menu #line div {
    width: 120%;
    border-radius: 0px;
}
body.menu #menu #line div.blank {
    opacity: 1;
}
body.menu #menu #line div {
    background-color: var(--black);
}
#menu #line div.blank {
    opacity: 0;
}

#menuBox {
    margin: 10px;
    padding: 15px 15px;
    opacity: 0;
    width: calc(100vw - 50px);
    pointer-events: none;
    border-radius: 13px;
    background-color: var(--white);
    position: absolute;
    top: 0px;
    right: 0px;
}
body.menu #menuBox {
    opacity: 1;
    pointer-events: all;
}
#menuBox #loggedAs {
    display: flex;
    align-items: flex-end;
    gap: 4px;
}
#menuBox #loggedAs * {
    margin: 0px;
    padding: 0px;
}
#menuBox #loggedAs h1 {
    font-size: 1.6rem;
}
#menuBox #loggedAs p {
    font-size: 1rem;
}
#menuBox #options {
    padding-top: 10px;
    display: flex;
    padding-left: 10px;
    padding-right: 10px;
    border: 1px solid var(--black);
    margin-top: 10px;
    border-radius: 7px;
    padding-bottom: 10px;
    gap: 10px;
    flex-direction: column;
}
#menuBox #options button {
    width: 100%;
    margin-top: 5px;
    padding: 0px;
    background-color: #a09174;
}
#menuBox #options button a {
    font-size: 1.4rem;
    color: var(--black);
    width: 100%;
    text-align: left;
    display: flex;
    align-items: center;
    height: 100%;
    padding: 0px 15px;
    text-decoration: none;
}
#menuBox p#message {
    width: 100%;
    white-space: normal;
    line-height: 150%;
    margin-top: 0px;
    margin-bottom: 0px;
    font-family: "Vazirmatn";
    font-size: 1.6rem;
    text-align: right;
}
#menuFooter p {
    margin: 0px;
    padding: 0px;
    margin-top: 20px;
}

#form {
    width: calc(90% - 50px);
    max-width: 300px;
    padding: 27px 25px;
    box-shadow: 0px 0px 5px #0101016b;
    border-radius: 7px;
    background-color: var(--light_black);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
/* ... */

